mofication to the EmployeDTO

--- a/EmployeeManagementSys/Views/Employee/Index.cshtml
+++ b/EmployeeManagementSys/Views/Employee/Index.cshtml
@@ -2,6 +2,10 @@
 
 <h2>Employee List</h2>
 
+<div class="text-center">
+    <a asp-action="Create" class="btn btn-primary">Create a New Employee</a>
+</div>
+
 <table class="table">
     <thead>
         <tr>
