--- a/EmployeeManagementSys/Views/Employee/Create.cshtml
+++ b/EmployeeManagementSys/Views/Employee/Create.cshtml
@@ -13,7 +13,9 @@
 
     <div class="form-group">
         <label asp-for="Position" class="control-label"></label>
-        <input asp-for="Position" class="form-control" />
+        <select asp-for="Position" asp-items="Html.GetEnumSelectList<Position>()" class="form-control">
+            <option value="">Select Position</option>
+        </select>
         <span asp-validation-for="Position" class="text-danger"></span>
     </div>
 
