--- a/EmployeeManagementSys/Views/Employee/Edit.cshtml
+++ b/EmployeeManagementSys/Views/Employee/Edit.cshtml
@@ -2,8 +2,10 @@
 
 <h2>Create/Edit Employee</h2>
 
-<form asp-action="Create" method="post">
+<form asp-action="Edit" method="post">
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
+    <input type="hidden" asp-for="Id" />
 
     <div class="form-group">
         <label asp-for="Name" class="control-label"></label>
@@ -13,7 +15,9 @@
 
     <div class="form-group">
         <label asp-for="Position" class="control-label"></label>
-        <input asp-for="Position" class="form-control" />
+        <select asp-for="Position" asp-items="Html.GetEnumSelectList<Position>()" class="form-control">
+            <option value="">Select Position</option>
+        </select>
         <span asp-validation-for="Position" class="text-danger"></span>
     </div>
 
